task1/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  tls:
  - hosts:
    - sunshiiiiine.com
    secretName: sunshine-tls-secret
  rules:
  - host: sunshiiiiine.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sretest-service
            port:
              number: 80
